Fix breadcrumbs to have ellipses for overflow.

--- a/_/less/breadcrumbs.less
+++ b/_/less/breadcrumbs.less
@@ -3,6 +3,11 @@
 	.font-size(1.6);
 	.line-h(1.6);
 	.mag-bot(3);
+		.breadcrumbs-inner {
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;	
+		}
 	a {
 	.txt-col-grayDk;
 		&:active {
